<resources>
    <string name="app_name">PetClump</string>
    <string name="greeting">Hello World!</string>
    <string name="User_Signed_In">User Signed In</string>
    <string name="Authentication_failed">Authentication_failed</string>
    <string name="facebook_app_id" translatable="false">224973144722885</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb224973144722885</string>
    <string name="Login_Cancelled">Login Cancelled</string>
    <string name="User_Signed_Out">User Signed Out</string>
    <string name="User_has_logined_in">User has logined in</string>
    <string name="settings">Settings</string>
    <string name="DOG">Dog</string>
    <string name="CAT">Cat</string>
    <string name="BIRD">Bird</string>
    <string name="ANT">Ant</string>
    <string name="FERRET">Ferret</string>
    <string name="FISH">Fish</string>
    <string name="FROG">Frog</string>
    <string name="GOAT">Goat</string>
    <string name="HAMSTER">Hamster</string>
    <string name="HORSE">Horse</string>
    <string name="PIG">Pig</string>
    <string name="RABBIT">Rabbit</string>
    <string name="SNAKE">Snake</string>
    <string name="TURTLE">Turtle</string>
    <string name="OCTOPUS">Octopus</string>
    <string name="LLAMA">Llama</string>
    <string name="OTHER">Other</string>
    <string name="EAGLE">Eagle</string>
    <string name="LIZARD">Lizard</string>
    <string name="Date_of_birth">Date of birth</string>
    <string name="Match_range">Match range</string>
    <string name="Gender">Gender</string>
    <string name="My_pets">My pets</string>
    <string name="My_schedule">My schedule</string>
    <string name="Pet_1">Pet 1</string>
    <string name="Photo_of_me">Photo of me</string>
    <string name="About_me">About me</string>
    <string name="Pet_2">Pet 2</string>
    <string name="Pet_3">Pet 3</string>
    <string-array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="gender_array">
        <item>Man</item>
        <item>Woman</item>
        <item>Apache Helicopter</item>
        <item>Other</item>
    </string-array>
    <string name="Upload_successful">Upload successful</string>
    <string name="Within_5_miles">Within 5 km</string>
    <string name="Within_20_miles">Within 20 km</string>
    <string name="Within_100_miles">Within 100 km</string>
    <string name="No_preferred_range">No preferred range</string>
    <string name="Edit_photo">Edit photo</string>
    <string name="Edit">Edit</string>
    <string name="Upload_failed">Upload failed</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Info_purpose">"How will Pet Clump use these information? "</string>
    <string name="Info_purpose2">Other people will  see your name, gender, and birthday only after they\'ve become friends with you. Match range value is used to optimize matching result according to your need.</string>
    <string name="Name">Name</string>
    <string name="your_pet">Photos of your pet</string>
    <string name="My_pet_and_I">My pet and I</string>
    <string name="info">INFO</string>
    <string name="Specie">Specie</string>
    <string name="Age">Age</string>
    <string name="Bio">Bio</string>
    <string name="Quiz">Quiz</string>
    <string name="Return">Return</string>
    <string name="About_my_pet">About my pet</string>
    <string name="Free_schedule">Free schedule</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="View_match_as">View match as...</string>
    <string name="Best_match">Best match</string>
    <string name="Best_location">Best location</string>
    <string name="Friends">Friends</string>
    <string name="Add_friend">Add friend</string>
    <string name="Do_you_like_to_answer_questions">Do you like to answer questions?</string>
    <string name="Do_you_spend_most_of_your_money_for_your_pet">Do you spend most of your money for your pet?</string>
    <string name="Do_you_think_your_pet_gradually_looks_similar_to_you">Do you think your pet gradually looks similar to you?</string>
    <string name="Do_you_beat_your_pet">Do you beat your pet?</string>
    <string name="Have_your_pet_ever_sleepwalked">Have your pet ever sleepwalked?</string>
    <string name="Do_you_think_that_your_pet_is_cute">Do you think that your pet is cute?</string>
    <string name="Does_your_pet_love_flowers">Does your pet love flowers?</string>
    <string name="Do_you_talk_to_your_pet_everyday">Do you talk to your pet everyday?</string>
    <string name="Does_your_pet_love_the_beach">Does your pet love the beach?</string>
    <string name="Does_your_pet_love_to_listen_to_music">Does your pet love to listen to music?</string>
    <string name="Does_your_pet_make_you_angry_sometimes">Does your pet make you angry sometimes?</string>
    <string name="Does_your_pet_smoke_weeds">Does your pet smoke weeds?</string>
    <string name="Does_your_pet_run_faster_than_you">Does your pet run faster than you?</string>
    <string name="Is_your_pet_nearsighted">Is your pet nearsighted?</string>
    <string name="Does_your_pet_love_to_take_a_bath">Does your pet love to take a bath?</string>
    <string name="Can_your_pet_be_put_into_a_jar">Can your pet be put into a jar?</string>
    <string name="Does_your_pet_love_surfing">Does your pet love surfing?</string>
    <string name="Do_you_think_your_pet_regard_you_as_a_servant">Do you think your pet regard you as a servant?</string>
    <string name="Does_your_pet_get_along_pretty_well_with_other_pets">Does your pet get along pretty well with other pets?</string>
    <string name="Do_you_take_your_pet_outside">Do you take your pet outside?</string>
    <string name="Do_you_sing_to_your_pet">Do you sing to your pet?</string>
    <string name="Is_your_pet_well_mannered">Is your pet well-mannered?</string>
    <string name="Do_you_like_short_hair_animal">Do you like short-hair animal?</string>
    <string name="Do_you_always_feed_your_pet_on_time">Do you always feed your pet on time?</string>
    <string name="Does_your_pet_has_a_dream">Does your pet has a dream?</string>
    <string name="Does_your_pet_ever_want_to_eat_you">Does your pet ever want to eat you?</string>
    <string name="Can_you_bear_that_when_your_pet_bothers_you">Can you bear that when your pet bothers you?</string>
    <string name="Do_you_tickle_your_pet">Do you tickle your pet?</string>
    <string name="If_your_pet_turns_into_human_one_day__would_you_want_to_date_them">If your pet turns into human one day, would you want to date them?</string>
    <string name="Does_your_pet_love_to_go_to_a_park">Does your pet love to go to a park?</string>
    <string name="Does_your_pet_bark_meow">Does your pet bark/meow?</string>
    <string name="Can_your_salary_easily_afford_your_pet">Can your salary easily afford your pet?</string>
    <string name="Do_you_love_your_pet">Do you love your pet?</string>
    <string name="Does_your_pet_attack_other_pets">Does your pet attack other pets?</string>
    <string name="Does_your_pet_love_swimming">Does your pet love swimming?</string>
    <string name="Does_your_pet_recognize_its_name_when_you_call_it">Does your pet recognize its name when you call it?</string>
    <string name="Do_you_take_your_pet_to_your_office_or_school">Do you take your pet to your office or school?</string>
    <string name="Does_your_pet_love_sunshine">Does your pet love sunshine?</string>
    <string name="Do_you_think_sterilization_is_fair_for_pets">Do you think sterilization is fair for pets?</string>
    <string name="Does_your_pet_randomly_poo">Does your pet randomly poo?</string>
    <string name="Is_your_pet_pregnant">Is your pet pregnant?</string>
    <string name="Do_you_like_long_hair_animal">Do you like long-hair animal?</string>
    <string name="Is_your_pet_introvert_or_extrovert">Is your pet introvert or extrovert?</string>
    <string name="Do_you_say_goodnight_to_your_pet_before_you_go_to_sleep">Do you say goodnight to your pet before you go to sleep?</string>
    <string name="Have_your_pet_mated_before">Have your pet mated before?</string>
    <string name="Do_you_kiss_your_pet">Do you kiss your pet?</string>
    <string name="Do_you_feel_energized_when_your_pet_is_around_you">Do you feel energized when your pet is around you?</string>
    <string name="Does_your_pet_wear_costumes">Does your pet wear costumes?</string>
    <string name="Does_your_pet_love_can_food">Does your pet love can food?</string>
    <string name="Do_you_sleep_with_your_pet_next_to_you">Do you sleep with your pet next to you?</string>
    <string name="Have_you_ever_wished_that_you_and_your_pet_can_switch_identity">Have you ever wished that you and your pet can switch identity?</string>
    <string name="Do_you_walk_with_your_pet_on_leash">Do you walk with your pet on leash?</string>
    <string name="Does_your_pet_love_watching_TV">Does your pet love watching TV?</string>
    <string name="Do_you_cuddle_with_your_pet">Do you cuddle with your pet?</string>
    <string name="Do_you_pet_different_species_of_animals">Do you pet different species of animals?</string>
    <string name="Will_you_be_distracted_by_your_pet_because_your_pets_are_too_lovely">Will you be distracted by your pet because your pets are too lovely?</string>
    <string name="Does_your_pet_love_money">Does your pet love money?</string>
    <string name="Is_your_pet_afraid_of_you">Is your pet afraid of you?</string>
    <string name="Have_your_pet_done_a_surgery_before">Have your pet done a surgery before?</string>
    <string name="Is_your_pet_smart">Is your pet smart?</string>
    <string name="Do_you_want_to_buy_more_pets">Do you want to buy more pets?</string>
    <string name="Do_you_prefer_big_pets_or_small_pets">Do you prefer big pets or small pets?</string>
    <string name="Do_you_train_your_pet_to_do_interesting_activities">Do you train your pet to do interesting activities?</string>
    <string name="Are_you_a_vegan">Are you a vegan?</string>
    <string name="Does_your_pet_chase_other_people_around">Does your pet chase other people around?</string>
    <string name="Does_your_pet_love_jungle">Does your pet love jungle?</string>
    <string name="Do_you_think_about_your_pet_when_they_are_not_with_you">Do you think about your pet when they are not with you?</string>
    <string name="Is_your_pet_long_hair">Is your pet long hair?</string>
    <string name="Do_you_buy_high_quality_food_to_your_pet">Do you buy high quality food to your pet?</string>
    <string name="Can_you_bear_your_pet_to_date_with_other_pets_and_make_you_lonely">Can you bear your pet to date with other pets and make you lonely?</string>
    <string name="All_done">All done!</string>
    <string name="You_have_answered_all_questions">You have answered all questions!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_matching_tab">MatchingTab</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="Local">Local</string>
    <string name="Report_profile">Report profile</string>
    <string name="Quiz_Finish">You\'ve finished 10 quizzes! Click to exit</string>
    <string name="Available_Quiz">Avaliable Quiz</string>
</resources>